update registration tutor